--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,15 @@ lein: lein2
 jdk:
   - oraclejdk7
   - openjdk7
-  - openjdk6
-script: ./ext/travisci/test.sh
+script: lein2 test :all
+before_script:
+  - psql -c 'create database jdbc_util_test;' -U postgres
+env:
+  global:
+    - TEST_DBUSER=postgres
+    - TEST_DBPASS=
+    - TEST_DBSUBNAME=//127.0.0.1:5432/jdbc_util_test
+addons:
+  postgresql: "9.3"
 notifications:
   email: false
-
-
