(maint) There can be only one test DB config.
Remove the modification of the test-db config performed in the fixture
that resets the test db, since it's confusing & error-prone to modify
the DB config with environment variable values in two different places,
and isn't necessary.

Change the name of the environment variables used to set the DB
configuration to `JDBCUTIL_DB*`, where `*` is one of `NAME`, `USER`, or
`PASS`.

Update the travis CI config to use the new environment variables.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ before_script:
   - psql -c 'create database jdbc_util_test;' -U postgres
 env:
   global:
-    - TEST_DBUSER=postgres
-    - TEST_DBPASS=
-    - TEST_DBSUBNAME=//127.0.0.1:5432/jdbc_util_test
+    - JDBCUTIL_DBNAME=//127.0.0.1:5432/jdbc_util_test
+    - JDBCUTIL_DBUSER=postgres
+    - JDBCUTIL_DBPASS=
 addons:
   postgresql: "9.3"
 notifications:
