--- a/dev-resources/log4j.properties
+++ b/dev-resources/log4j.properties
@@ -1,5 +1,7 @@
 log4j.rootLogger=INFO, console
-log4j.logger.puppetlabs.jdbc-util.core=DEBUG
+log4j.logger.puppetlabs.jdbc-util=OFF
+log4j.logger.com.zaxxer.hikari=OFF
+log4j.logger.migratus=OFF
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%-5p %c: %m%n
