(PE-20922) Fix deprecation warning in jdbc-utils
Hikari deprecated the setInitializationFailFast() method used when configuring the connection pool. That method now spams the log with deprecation warnings. To fix we use setInitializationFailTimeout(-1) instead. Also updated the log4j.properties to reenable WARN logging for Hikari.

--- a/dev-resources/log4j.properties
+++ b/dev-resources/log4j.properties
@@ -1,6 +1,6 @@
 log4j.rootLogger=INFO, console
 log4j.logger.puppetlabs.jdbc-util=OFF
-log4j.logger.com.zaxxer.hikari=OFF
+log4j.logger.com.zaxxer.hikari=WARN
 log4j.logger.migratus=OFF
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
