(maint) update travis.yml
This updates travis.yml to have the right jdk versions, and a newer
version of lein.  The previous config would fail with cert issues.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: clojure
+lein: 2.9.1
 jdk:
-  - oraclejdk9
-  - oraclejdk8
+  - openjdk11
+  - openjdk8
 script: lein test :all
 sudo: false
 before_script:
